fixes movie alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,7 @@ body {
 	/* background-image: url('background.png');  */
 	font-size: 8pt;
 	font-family: Verdana, Tahoma, sans-serif;
+
 }
 
 .banner {
@@ -123,7 +124,7 @@ main {
 	/* background-image: url('rottenbg.png'); */
 	color: red;
 	font-size: 48pt;
-	vertical-align: middle;
+	vertical-align: center;
 	height: 83px;
 }
 
